# api-remove-img-bg

./: .gitignore  Dockerfile  Makefile  compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: main.yml
code/: app.py  index.html
tests/: conftest.py  test_api_responses.py
tests/imgs/: pep.txt
